Fixed spacing in footer.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -62,6 +62,7 @@ nav a {
 .hero h1 {
         color: var(--accent-color-2);
         font-family: sigmar one, static;
+        font-size: 4vw;
         padding: 20px;
         position: absolute;
         align-content: center;
@@ -91,6 +92,10 @@ nav a {
         align-content: center;
         justify-content: center;
         padding-bottom: 1.5rem;
+}
+
+.hero h2 {
+        text-align: center;
 }
 
 .container {
@@ -198,23 +203,31 @@ figure {
 }
 
 .footer-container {
-        text-align: center;
+        display: flex;
+        justify-content: space-between;
         border-top: 3px solid var(--accent-color-1);
         margin: 0;
         color: var(--accent-color-2);
         background-color: var(--secondary-color);
         font-family: kanit, static, bold;
-        font-size: 1.5rem;
-        padding-bottom: 20px;
+        font-size: 2vw;
+        padding: 20px;
+}
+.footer-container p {
+        margin-left: 60px;
 }
 
-.social-links {
+.social-links a {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         text-decoration: none;
         float: right;
-        position: relative;
-        top: -60px;
+        padding: 20px 
+}
+
+.social-links a img {
+        width: clamp(10px, 4vw, 40px);
+        height: auto;
 }
  
 
